Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-nginx 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

 

spec:
  ingressClassName: nginx
  rules:
  - host: raghavkhurana7777.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service
              port:
                number: 80
